package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "node_modules_filegroup")

exports_files([
    "tsconfig.json",
    "LICENSE",
    "protractor-perf.conf.js",
])

# Developers should always run `bazel run :install`
# This ensures that package.json in subdirectories get installed as well.
alias(
    name = "install",
    actual = "@nodejs//:yarn",
)

# We use bazel-managed node modules.
# This means that `yarn install` will be called automatically by Bazel when needed.
alias(
    name = "node_modules",
    actual = "@npm//:node_modules",
)

filegroup(
    name = "web_test_bootstrap_scripts",
    # do not sort
    srcs = [
        "@npm//:node_modules/reflect-metadata/Reflect.js",
        "@npm//:node_modules/zone.js/dist/zone.js",
        "@npm//:node_modules/zone.js/dist/zone-testing.js",
        "@npm//:node_modules/zone.js/dist/task-tracking.js",
        "//:test-events.js",
    ],
)

filegroup(
    name = "angularjs_scripts",
    srcs = [
        "@npm//:node_modules/angular-1.5/angular.js",
        "@npm//:node_modules/angular-1.6/angular.js",
        "@npm//:node_modules/angular-mocks-1.5/angular-mocks.js",
        "@npm//:node_modules/angular-mocks-1.6/angular-mocks.js",
        "@npm//:node_modules/angular-mocks/angular-mocks.js",
        "@npm//:node_modules/angular/angular.js",
    ],
)
